--- a/cinema-app-api/appsettings.json
+++ b/cinema-app-api/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=localhost; port=5432; user id = cinema-app; password = cinema-app; database=cinema-app; pooling = true"
+  }
 }
