--- a/cinema-app-api/cinema-app-api.csproj
+++ b/cinema-app-api/cinema-app-api.csproj
@@ -1,9 +1,12 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>cinema_app_api</RootNamespace>
   </PropertyGroup>
-
-
+  <ItemGroup>
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4"/>
+    <PackageReference Include="Npgsql" Version="4.1.5"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9"/>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9"/>
+  </ItemGroup>
 </Project>
