--- a/src/cinema-app-api/appsettings.json
+++ b/src/cinema-app-api/appsettings.json
@@ -10,5 +10,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost; port=5432; user id = cinema-app; password = cinema-app; database=cinema-app; pooling = true",
     "DockerConnection": "Server=cinema-app-database; port=5432; user id = cinema-app; password = cinema-app; database=cinema-app; pooling = true"
+  },
+  "Security": {
+    "SecretKey": "This is super secret, know one will ever find this one! Buhahahaha!"
   }
 }
