--- a/src/cinema-app-api/cinema-app-api.csproj
+++ b/src/cinema-app-api/cinema-app-api.csproj
@@ -4,9 +4,10 @@
     <RootNamespace>cinema_app_api</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4"/>
-    <PackageReference Include="Npgsql" Version="4.1.5"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9"/>
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9"/>
+    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="3.1.9" />
+    <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="3.1.4" />
+    <PackageReference Include="Npgsql" Version="4.1.5" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
   </ItemGroup>
 </Project>
