--- a/src/cinema-app-api/cinema-app-api.csproj
+++ b/src/cinema-app-api/cinema-app-api.csproj
@@ -9,5 +9,6 @@
     <PackageReference Include="Npgsql" Version="4.1.5" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.0" />
   </ItemGroup>
 </Project>
