--- a/src/cinema-app-api/cinema-app-api.csproj
+++ b/src/cinema-app-api/cinema-app-api.csproj
@@ -10,5 +10,6 @@
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="3.1.9" />
     <PackageReference Include="Microsoft.EntityFrameworkCore" Version="3.1.9" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.5.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="3.1.9" />
   </ItemGroup>
 </Project>
